# cuda-start

./: CMakeLists.txt  README.md  funcs.h  funcs_cuda.cu  funcs_cuda.cuh  main.cpp
