cmake_minimum_required(VERSION 3.17)
project(cuda_start)
find_package(CUDA)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CUDA_STANDARD 11)
set(CMAKE_CUDA_STANDARD_REQUIRED True)
#set(CMAKE_CUDA_COMPILER "/usr/local/cuda-8.0/bin/nvcc")
include(CheckLanguage)
check_language(CUDA)
enable_language(CUDA)
#set(CMAKE_CUDA_COMPILER ${CUDA_HOME})
project(cuda_start LANGUAGES CXX CUDA)


if (CUDA_FOUND)
    message("CUDA found, using device squaring!")
#    enable_language(CUDA)
#    message("CMAKE_CUDA_COMPILER_ID is ${CMAKE_CUDA_COMPILER_ID}")
else()
    message("CUDA not found, doing something alternatively")
endif()
add_executable(cuda_start main.cpp)